[gd_scene load_steps=21 format=3 uid="uid://dgwhev5imypr8"]

[ext_resource type="Script" uid="uid://biwuwhtwoexaw" path="res://Interface/Pause/pause.gd" id="1_tymi6"]
[ext_resource type="Theme" uid="uid://c3y4p2f8djdyb" path="res://Interface/MainMenu/Themes/title_button.tres" id="2_2wx6c"]
[ext_resource type="FontFile" uid="uid://cfvfiw1qtrep1" path="res://Interface/Font/OverusedGrotesk-Bold.otf" id="2_atxbg"]
[ext_resource type="Texture2D" uid="uid://ba641twe6vsbv" path="res://Interface/MainMenu/Texture/T_PauseBG.png" id="2_sa6jc"]
[ext_resource type="Script" uid="uid://dt636jiq7je6r" path="res://Interface/MainMenu/Scripts/menu_button.gd" id="3_atxbg"]
[ext_resource type="Texture2D" uid="uid://dtwt7id77l3f" path="res://Interface/Pause/Screenshot 2025-03-02 105152.png" id="4_2wx6c"]
[ext_resource type="FontFile" uid="uid://d02qiqkper325" path="res://Interface/Font/OverusedGrotesk-Medium.otf" id="5_sa6jc"]
[ext_resource type="Texture2D" uid="uid://bivri32i53cow" path="res://Interface/Loading/LoadGameMenu/Objective.png" id="6_0mkij"]
[ext_resource type="Script" uid="uid://d02ndr1cfnfix" path="res://Interface/MainMenu/Sound/buttonSFX.gd" id="9_q4mhb"]
[ext_resource type="PackedScene" uid="uid://wted730xx6x5" path="res://Interface/Settings/settings_menu.tscn" id="9_x7wnv"]
[ext_resource type="PackedScene" uid="uid://c0igyvhisp714" path="res://Interface/Loading/LoadGameMenu/load_game.tscn" id="10_nh1wh"]
[ext_resource type="Script" uid="uid://cram086kryr7c" path="res://Interface/MainMenu/Scripts/menu_popup.gd" id="11_ubcy4"]
[ext_resource type="Theme" uid="uid://bsmuhrjx0b4k2" path="res://Interface/MainMenu/Themes/prompt_button.tres" id="12_3do1l"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_w20tc"]
color = Color(0.411765, 0.858824, 1, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtlhd"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.417257, 0.417257, 0.417257, 1)

[sub_resource type="FontVariation" id="FontVariation_bslv7"]
base_font = ExtResource("5_sa6jc")
spacing_bottom = -5

[sub_resource type="Animation" id="Animation_txout"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fi64f"]
resource_name = "fadein"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xtj4b"]
resource_name = "fadeout"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61gjo"]
_data = {
&"RESET": SubResource("Animation_txout"),
&"fadein": SubResource("Animation_fi64f"),
&"fadeout": SubResource("Animation_xtj4b")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tymi6")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.690196)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_sa6jc")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 10.0
offset_right = 361.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.411765, 0.858824, 1, 1)
theme_override_fonts/font = ExtResource("2_atxbg")
theme_override_font_sizes/font_size = 60
text = "PAUSED"
vertical_alignment = 1
uppercase = true

[node name="Seperator" type="HSeparator" parent="."]
layout_mode = 0
offset_top = 85.0
offset_right = 314.0
offset_bottom = 89.0
theme_override_styles/separator = SubResource("StyleBoxLine_w20tc")

[node name="buttons" type="Node2D" parent="."]

[node name="Resume" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 345.0
offset_right = 366.0
offset_bottom = 379.0
theme = ExtResource("2_2wx6c")
text = "RESUME"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Restart" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 380.0
offset_right = 366.0
offset_bottom = 414.0
theme = ExtResource("2_2wx6c")
text = "RESTART CHECKPOINT"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Load" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 415.0
offset_right = 366.0
offset_bottom = 449.0
theme = ExtResource("2_2wx6c")
text = "LOAD GAME"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Settings" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 450.0
offset_right = 366.0
offset_bottom = 484.0
theme = ExtResource("2_2wx6c")
text = "SETTINGS"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Main" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 485.0
offset_right = 366.0
offset_bottom = 519.0
theme = ExtResource("2_2wx6c")
text = "MAIN MENU"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Quit" type="Button" parent="buttons"]
offset_left = 111.0
offset_top = 520.0
offset_right = 366.0
offset_bottom = 554.0
theme = ExtResource("2_2wx6c")
text = "QUIT GAME"
alignment = 0
script = ExtResource("3_atxbg")

[node name="Current" type="Node2D" parent="buttons"]
visible = false
position = Vector2(80, 479)

[node name="ColorRect" type="ColorRect" parent="buttons/Current"]
offset_right = 9.0
offset_bottom = 35.0
color = Color(0.411765, 0.858824, 1, 1)

[node name="Objective" type="Node2D" parent="."]
position = Vector2(1111, 38)

[node name="Label" type="Label" parent="Objective"]
offset_left = -594.0
offset_top = 1.0
offset_right = -35.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("5_sa6jc")
theme_override_font_sizes/font_size = 20
text = "Avoid detection from yarnaby"
horizontal_alignment = 2
uppercase = true

[node name="Objective2" type="Sprite2D" parent="Objective"]
modulate = Color(1, 1, 0, 1)
position = Vector2(-16, 15.5)
scale = Vector2(0.125, 0.121094)
texture = ExtResource("6_0mkij")

[node name="Screenshot2025-03-02105152" type="Sprite2D" parent="."]
visible = false
position = Vector2(595, 906)
scale = Vector2(0.605042, 0.66055)
texture = ExtResource("4_2wx6c")

[node name="SettingsMenu" parent="." instance=ExtResource("9_x7wnv")]
visible = false
layout_mode = 1
menu_popup = NodePath("../menu_popup")

[node name="LoadGame" parent="." instance=ExtResource("10_nh1wh")]
visible = false
layout_mode = 1
menu_popup_path = NodePath("../menu_popup")

[node name="menu_popup" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ubcy4")

[node name="Background" type="Sprite2D" parent="menu_popup"]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_sa6jc")

[node name="Panel" type="Panel" parent="menu_popup"]
layout_mode = 0
offset_top = 228.0
offset_right = 1152.0
offset_bottom = 448.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xtlhd")

[node name="Prompt" type="Label" parent="menu_popup"]
layout_mode = 0
offset_left = 285.0
offset_top = 255.0
offset_right = 867.0
offset_bottom = 287.0
theme_override_colors/font_color = Color(0.411765, 0.858824, 1, 1)
theme_override_fonts/font = ExtResource("2_atxbg")
theme_override_font_sizes/font_size = 23
text = "EXIT GAME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SubPrompt" type="Label" parent="menu_popup"]
layout_mode = 0
offset_left = 203.0
offset_top = 307.0
offset_right = 950.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0.721859, 0.721859, 0.721859, 1)
theme_override_fonts/font = SubResource("FontVariation_bslv7")
theme_override_font_sizes/font_size = 14
text = "Are you sure you want to exit the game?"
horizontal_alignment = 1

[node name="Yes" type="Button" parent="menu_popup"]
layout_mode = 0
offset_left = 480.0
offset_top = 377.0
offset_right = 560.0
offset_bottom = 423.0
theme = ExtResource("12_3do1l")
theme_override_fonts/font = ExtResource("5_sa6jc")
theme_override_font_sizes/font_size = 20
text = "YES"

[node name="No" type="Button" parent="menu_popup"]
layout_mode = 0
offset_left = 588.0
offset_top = 377.0
offset_right = 668.0
offset_bottom = 423.0
theme = ExtResource("12_3do1l")
theme_override_fonts/font = ExtResource("5_sa6jc")
theme_override_font_sizes/font_size = 20
text = "NO"

[node name="ButtonSFXPlayer" type="Node" parent="menu_popup"]
script = ExtResource("9_q4mhb")
root_path = NodePath("..")
metadata/_custom_type_script = "uid://d02ndr1cfnfix"

[node name="Animation" type="AnimationPlayer" parent="menu_popup"]
libraries = {
&"": SubResource("AnimationLibrary_61gjo")
}

[node name="ButtonSFXPlayer" type="Node" parent="."]
script = ExtResource("9_q4mhb")
root_path = NodePath("../buttons")
metadata/_custom_type_script = "uid://d02ndr1cfnfix"

[connection signal="pressed" from="buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="buttons/Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="buttons/Quit" to="." method="_on_quit_pressed"]
